tests/file_test/testdata/unicode_escape_invalid_sequence.llang
let s = "abc\u{deadxy}def";
